--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -fr docs/ && react-scripts build && cp -r build/ docs/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
