--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jsxprmnts",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://elkeis.github.io/jsxprmnts/",
   "dependencies": {
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
@@ -10,9 +11,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "rm -fr docs/ && react-scripts build && cp -r build/ docs/",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -22,5 +25,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
